Mobile overflow fix

--- a/main.css
+++ b/main.css
@@ -1,17 +1,18 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: "Nexa", sans-serif;
+}
+.logo-container{
 	background: #000;
+	overflow: hidden;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	font-family: "Nexa", sans-serif;
-	overflow: hidden;
 }
-
 .logo-wrapper {
 	position: relative;
 }
